# difiko

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  demo.tape  dist-workspace.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  config.rs  event.rs  lib.rs  main.rs  model.rs  new_window.rs  open_file.rs  persistence.rs  tasks.rs  tree.rs
src/app/: completion.rs  mod.rs  modal.rs  pending.rs  picker.rs  search.rs  text_input.rs  toast.rs
src/event/: actions.rs  git_results.rs  loaders.rs  mod.rs  modal.rs  mouse.rs  setup.rs
src/git/: blame.rs  branches.rs  command.rs  commits.rs  diff.rs  mod.rs  parse.rs
src/input/: bindings.rs  mod.rs
src/input/bindings/: fullscreen.rs  mod.rs  modal.rs  review.rs  search.rs  setup.rs
src/ui/: commits_panel.rs  diff_view.rs  fullscreen.rs  help.rs  hint_bar.rs  mod.rs  modal.rs  review.rs  setup.rs  sidebar.rs  status_bar.rs  syntax.rs  theme.rs  toast.rs  word_diff.rs
src/ui/diff_view/: blame.rs  layered.rs  mod.rs  split.rs  unified.rs  word.rs
src/ui/theme/: config.rs  mod.rs
tests/: git_smoke.rs
